# coffee-shop-whatsapp-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Coffee_Shop_WhatsApp_Bot_Tests.postman_collection.json  Dockerfile  ENVIRONMENT_VARIABLES.md  Makefile  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  app.json  docker-compose.yml  integration_test_report.md  postman_collection.json  pyproject.toml  requirements.txt  setup.py  test_clover_integration.py  test_db.py  test_llm_integration.py  test_system_integration.py  test_whatsapp_integration.py
docs/: DEPLOYMENT_GUIDE.md  OPENAI_API_IMPACT.md  PROJECT_STRUCTURE.md  WHATSAPP_INTEGRATION.md
src/: config.py  database_init.py  main.py
src/database/: app.db
src/models/: sales_cache.py
src/routes/: api.py  webhook.py
src/services/: clover_api.py  llm_client.py  message_processor.py  multimedia_formatter.py  sales_processor.py  scheduler.py  whatsapp_client.py
src/static/: index.html
tests/: __init__.py  conftest.py  pytest.ini  test_runner.py
tests/integration/: __init__.py  integration_test_report.md  test_clover_integration.py  test_db.py  test_llm_integration.py  test_system_integration.py  test_webhook.py  test_whatsapp_integration.py
tests/unit/: __init__.py  test_clover_api.py  test_llm_client.py  test_message_processor.py  test_sales_processor.py  test_whatsapp_client.py
